open/close quick nano browser
[9453:9453:0130/131210.945356:FATAL:browser_context.cc(547)] Check failed: !GetUserData(kStoragePartitionMapKeyName). StoragePartitionMap is not shut down properly
1 content::(anonymous namespace)::GetStoragePartitionMap browser_context.cc 111 0x7fffea53d41a 2 content::(anonymous namespace)::GetStoragePartitionFromConfig browser_context.cc 123 0x7fffea53d489 3 content::BrowserContext::GetStoragePartition browser_context.cc 272 0x7fffea53dfe4 4 content::BrowserContext::GetDefaultStoragePartition browser_context.cc 304 0x7fffea53e157 5 content::(anonymous namespace)::ShouldUseSiteProcessTracking render_process_host_impl.cc 915 0x7fffeb05d5a5 6 content::(anonymous namespace)::ShouldTrackProcessForSite render_process_host_impl.cc 926 0x7fffeb05d604 7 content::RenderProcessHostImpl::RemoveFrameWithSite render_process_host_impl.cc 2324 0x7fffeb065778 8 content::RenderFrameHostImpl::SetLastCommittedSiteUrl render_frame_host_impl.cc 4141 0x7fffea9e469d 9 content::RenderFrameHostImpl::~RenderFrameHostImpl render_frame_host_impl.cc 555 0x7fffea9cccd8 10 content::RenderFrameHostImpl::~RenderFrameHostImpl render_frame_host_impl.cc 606 0x7fffea9cd5ea 11 std::default_delete<content::RenderFrameHostImpl>::operator() unique_ptr.h 76 0x7fffeaa5297e 12 std::unique_ptr<content::RenderFrameHostImpl, std::default_delete<content::RenderFrameHostImpl>>::~unique_ptr unique_ptr.h 239 0x7fffeaa4fd31 13 content::RenderFrameHostManager::~RenderFrameHostManager render_frame_host_manager.cc 83 0x7fffeaa41f17 14 content::FrameTreeNode::~FrameTreeNode frame_tree_node.cc 172 0x7fffea95672e 15 std::default_delete<content::FrameTreeNode>::operator() unique_ptr.h 76 0x7fffea95117c 16 std::unique_ptr<content::FrameTreeNode, std::default_delete<content::FrameTreeNode>>::~unique_ptr unique_ptr.h 239 0x7fffea9500a9 17 std::_Destroy<std::unique_ptr<content::FrameTreeNode, std::default_delete<content::FrameTreeNode>>> stl_construct.h 93 0x7fffea965087 18 std::_Destroy_aux<false>::__destroy<std::unique_ptr<content::FrameTreeNode, std::default_delete<content::FrameTreeNode>> *> stl_construct.h 103 0x7fffea961fb9 19 std::_Destroy<std::unique_ptr<content::FrameTreeNode, std::default_delete<content::FrameTreeNode>> *> stl_construct.h 126 0x7fffea95f3de 20 std::_Destroy<std::unique_ptr<content::FrameTreeNode, std::default_delete<content::FrameTreeNode>> *, std::unique_ptr<content::FrameTreeNode, std::default_delete<content::FrameTreeNode>>> stl_construct.h 151 0x7fffea95c085 ... <More>
- duplicates
-
QTBUG-66012 Using custom profile asserts on exit
-
- Closed
-
| For Gerrit Dashboard: QTBUG-66081 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 218466,2 | Shutdown storage in browser context adapter destructor | 5.9 | qt/qtwebengine | Status: MERGED | +2 | 0 |