Shutdown storage in browser context adapter destructor

Shutdown storage should take place in destructor, otherwise
it might get recreated on web content destruction.

Task-number: QTBUG-66081
Change-Id: Ibba3fce50e05e09131cf45061320a9f99267babd
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>